<resources>
    <string name="app_name">Chirrup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chirrup</string>
    <string name="nav_header_subtitle">Navigation Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_followers">Followers</string>
    <string name="button_following">Following</string>
    <string name="button_follow">Follow</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="button_block">Block</string>
    <string name="placeholder"> </string>
    <string name="view">View</string>
    <string name="add_reply">Add Reply</string>
    <string name="report">Report</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="newpost">Compose</string>
    <string name="mainfeed">Feed</string>
    <string name="menu_profile">Profile</string>
    <string name="search">Search</string>
    <string name="reports">Reports</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="children">Children</string>
    <string name="base_url">http://coms-309-016.cs.iastate.edu:8080/api/</string>
</resources>