<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainFeed"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/mainfeed" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_messaging"
            android:icon="@android:drawable/ic_menu_send"
            android:title="Messages" />
        <item
            android:id="@+id/nav_newPost"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/newpost" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="Login" />
        <item
            android:id="@+id/nav_newProfile"
            android:icon="@android:drawable/ic_menu_save"
            android:title="New Profile" />
    </group>
</menu>