<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".profile.personal.PersonalProfileFragment">

    <ImageView
        android:id="@+id/personalprofile_avatar"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/placeholder"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/personalprofile_bio"
        app:layout_constraintEnd_toStartOf="@+id/personalprofile_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/personalprofile_name"
        android:layout_width="184dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/placeholder"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personalprofile_username"
        android:layout_width="184dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/placeholder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalprofile_name" />

    <TextView
        android:id="@+id/personalprofile_bio"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/placeholder"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalprofile_avatar" />

    <Button
        android:id="@+id/personalprofile_followers"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/button_followers"
        android:textAlignment="center"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/personalprofile_following"
        app:layout_constraintTop_toBottomOf="@+id/personalprofile_username" />

    <Button
        android:id="@+id/personalprofile_following"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/button_following"
        android:textAlignment="center"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalprofile_username" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalprofile_bio">

        <ScrollView
            android:id="@+id/personalprofile_feed_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/personalprofile_feed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>